--- a/config/QtProject.conf
+++ b/config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/time, file:///home/time/编程学习/工作简历和面试资料/师兄师姐的简历, file:///home/time/.deepinwine/Deepin-WeChat/dosdevices/y:/WeChat Files/wxid_65t0lhesd4xe22/FileStorage/File/2024-03, file:///home/time/.deepinwine/Deepin-WeChat/dosdevices/y:/编程学习/工作简历和面试资料/师兄师姐的简历
-lastVisited=file:///home/time/.deepinwine/Deepin-WeChat/dosdevices/y:/编程学习/工作简历和面试资料/师兄师姐的简历
+history=file:///home/time, file:///home/time/编程学习/工作简历和面试资料/师兄师姐的简历, file:///home/time/.deepinwine/Deepin-WeChat/dosdevices/y:/WeChat Files/wxid_65t0lhesd4xe22/FileStorage/File/2024-03, file:///home/time/.deepinwine/Deepin-WeChat/dosdevices/y:/编程学习/工作简历和面试资料/师兄师姐的简历, file:///home/time/Downloads/QQFile
+lastVisited=file:///home/time/Downloads/QQFile
 qtVersion=6.6.2
 shortcuts=file:, file:///home/time
 sidebarWidth=74
