--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -593,7 +593,7 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-		background_image none
+		# background_image ~/Pictures/wallpaper/21.png
 
 #: Path to a background image. Must be in PNG format.
 
