--- a/config/xnviewmp/xnview.ini
+++ b/config/xnviewmp/xnview.ini
@@ -50,10 +50,11 @@ useShadow=false
 useThumbBackColor=true
 
 [Browser]
+Tab=4294967295
 audioVolume=100
 catMatchAll=false
 catMode=0
-categoryStatus=
+categoryStatus="1,1,0,1,0,0"
 custom1Ext=htm, html, mht, mhtml, xml, xhtml, eml, nws, url, svg, svgz
 custom2Ext=@Invalid()
 customFilter=65279
@@ -66,6 +67,8 @@ folderColor2=255 200 74
 folderColor3=197 140 0
 folderColor4=250 210 105
 folderColor5=172 140 53
+header="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\x30\0\0\0\x1\0\0\0\0\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e\0\0\0\x1f\0\0\0 \0\0\0!\0\0\0\"\0\0\0#\0\0\0$\0\0\0%\0\0\0&\0\0\0'\0\0\0(\0\0\0)\0\0\0*\0\0\0+\0\0\0,\0\0\0-\0\0\0.\0\0\0/\0\0\0\x30\0\0\0\x1\0\0\0\0\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e\0\0\0\x1f\0\0\0 \0\0\0!\0\0\0\"\0\0\0#\0\0\0$\0\0\0%\0\0\0&\0\0\0'\0\0\0(\0\0\0)\0\0\0*\0\0\0+\0\0\0,\0\0\0-\0\0\0.\0\0\0/\0\0\0\0\0\0\0\0\0\0\x1c \0\0\0\x30\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x96\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x30\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\0\x96\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x96)"
+header2=false
 histogramMode=2
 keyDelayedPrev=false
 layout=-1
@@ -93,11 +96,13 @@ selectOnEnterFolder=false
 showCompanionFiles=true
 showHiddenFiles=false
 showPaneTitle=true
+size=@Size(2538 1490)
 sizeInBytes=false
 smallToolBar=true
 sort=0
 sortNameMethod=0
 sortOrder=0
+state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\x2\0\0\0\0\0\0\0\xa3\0\0\x4\x63\xfc\x2\0\0\0\x1\xfc\0\0\0H\0\0\x4\x63\0\0\0\xaf\0\xff\xff\xff\xfa\0\0\0\0\x1\0\0\0\x3\xfb\0\0\0\xe\0\x66\0o\0l\0\x64\0\x65\0r\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\xfb\0\0\0\x12\0\x66\0\x61\0v\0o\0r\0i\0t\0\x65\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0h\0\xff\xff\xff\xfb\0\0\0\x12\0\x63\0\x61\0t\0\x65\0g\0o\0r\0y\0\x44\x1\0\0\0\0\0\0\0\xa3\0\0\0h\0\xff\xff\xff\0\0\0\x3\0\0\t\xea\0\0\0\xfe\xfc\x1\0\0\0\x3\xfc\0\0\0\0\0\0\x6<\0\0\x1g\0\xff\xff\xff\xfa\0\0\0\0\x2\0\0\0\x5\xfb\0\0\0\n\0p\0r\0\x65\0v\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xb0\0\xff\xff\xff\xfb\0\0\0\b\0m\0\x65\0t\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\x1a\0\xff\xff\xff\xfb\0\0\0\n\0h\0i\0s\0t\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\x1a\0\xff\xff\xff\xfb\0\0\0\b\0\x63\0\x61\0t\0\x44\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\xab\0\xff\xff\xff\xfb\0\0\0\n\0s\0\x65\0t\0s\0\x44\x1\0\0\x1v\0\0\0\xc9\0\0\0\xd4\0\xff\xff\xff\xfb\0\0\0\x14\0\x41\0p\0\x65\0r\0\xe7\0u\0\x44\0o\0\x63\0k\x1\0\0\x1\xba\0\0\x1\x98\0\0\0\0\0\0\0\0\xfb\0\0\0\f\x98\x84\x89\xc8\0\x44\0o\0\x63\0k\x1\0\0\x6\x45\0\0\x3\xa5\0\0\0h\0\xff\xff\xff\0\0\t>\0\0\x4\x63\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\n]\xe5Qwh\xf\0 \0\x31\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
 statusBar=true
 statusBarDate=1
 statusBarFlags=15
@@ -117,6 +122,10 @@ useThumbSize=true
 useTooltips=true
 vTabs=true
 viewAs=1
+
+[CatSets]
+history=@ByteArray(\0\0\0\x1\0\0\0\0)
+panel=@ByteArray(\0\0\0\x1\0\0\0\x3\xff\xff\xff\xff\x1\xff\xff\xff\xfe\x1\xff\xff\xff\xfd\x1)
 
 [ColorLabel]
 label_0=\x65e0\x8272
@@ -170,14 +179,14 @@ useCatalog=true
 useMaxCache=false
 
 [Format]
-archive=7z cbz zip tgz arj gz rar cbr tar
-audio=wma ogg au mp+ mpp aif mp3 mp2 snd m4a rmi asx mid flac wav mpc
-avi=avi asf wmv vob vfw divx
-mpeg=mpa m2v mp4 mpg mpeg mpe m2ts mts m4v m1s mpm m1v
-ps=eps epsf ai ps pdf
-qt=3gp2 3g2 mov 3gp qt
-text=cpp js txt pas cc xmp css ini gcode c++ h php c
-video=rm webm mkv mxf flv aae ts
+archive=tar gz arj tgz 7z cbr cbz rar zip
+audio=au mp+ snd mpc rmi mid wma m4a wav mp3 ogg flac mpp aif asx mp2
+avi=vob avi asf divx wmv vfw
+mpeg=m4v mpe m1v mpg mts mp4 m2v mpa mpm m1s m2ts mpeg
+ps=eps epsf ps pdf ai
+qt=qt 3gp 3gp2 mov 3g2
+text=js txt css php c++ pas xmp c h ini cc gcode cpp
+video=flv mxf ts mkv webm aae rm
 
 [%General]
 allFormats=false
@@ -308,6 +317,14 @@ commentCodec=0
 exifCodec=26
 useUtf8ForDescription=false
 
+[Preview]
+fit=1
+info=@ByteArray(\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1\x1)
+prevDocked=true
+showAlwaysTabs=false
+tabs=true
+vTab=65405
+
 [Save]
 AvifFormat=0
 AvifQuality=80
@@ -375,10 +392,13 @@ keepXMP=true
 useOriginalJPEGQuality=false
 
 [Start]
+History=/home/time/Pictures/wallpaper/
+LastFilename=/home/time/Pictures/wallpaper/12.png
 OpenWith=@Invalid()
 OpenWithName=@Invalid()
 OpenWithParam=@Invalid()
-RecentFiles=/home/time/Pictures/anime/wallhaven-k76j8q_1080x1920.png, /home/time/Pictures/\x7ad6\x5c4f\x56fe\x7247/1.png
+PathBrowser=/home/time/Pictures/wallpaper/
+RecentFiles=/home/time/Pictures/wallpaper/11.png, /home/time/Pictures/anime/wallhaven-k76j8q_1080x1920.png, /home/time/Pictures/\x7ad6\x5c4f\x56fe\x7247/1.png
 checkFreq=2
 customPath=
 dbFlag=0
@@ -386,7 +406,7 @@ dbFolder=
 dbThumbFlag=3
 dbThumbFolder=
 debug=0
-geom=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xbc\0\0\0k\0\0\bq\0\0\x6 \0\0\x1\xbe\0\0\0m\0\0\bo\0\0\x6\x1e\0\0\0\x1\0\0\0\0\n\0\0\0\x1\xbe\0\0\0m\0\0\bo\0\0\x6\x1e)
+geom=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0G\0\0\x5\xf0\0\0\n4\0\0\v\xf5\0\0\0I\0\0\x5\xf2\0\0\n2\0\0\v\xf3\0\0\0\0\0\0\0\0\n\0\0\0\0I\0\0\x5\xf2\0\0\n2\0\0\v\xf3)
 language=zh
 lastCheck=@Variant(\0\0\0\xe\0%\x8a\xe7)
 oneInstance=false
@@ -477,7 +497,7 @@ showRegion=false
 slideDelay=2000
 slideDir=0
 spaceKey=0
-state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x6\xb2\0\0\x5\x18\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\n]\xe5Qwh\xf\0 \0\x31\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
+state=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\t\xea\0\0\x5h\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\x1\0\0\0\x2\0\0\0\x1\0\0\0\n]\xe5Qwh\xf\0 \0\x31\x1\0\0\0\0\xff\xff\xff\xff\0\0\0\0\0\0\0\0)
 statusBar=true
 statusBarDate=1
 statusBarFlags=175
