--- a/config/xnviewmp/xnview.ini
+++ b/config/xnviewmp/xnview.ini
@@ -179,14 +179,14 @@ useCatalog=true
 useMaxCache=false
 
 [Format]
-archive=tar gz arj tgz 7z cbr cbz rar zip
-audio=au mp+ snd mpc rmi mid wma m4a wav mp3 ogg flac mpp aif asx mp2
-avi=vob avi asf divx wmv vfw
-mpeg=m4v mpe m1v mpg mts mp4 m2v mpa mpm m1s m2ts mpeg
-ps=eps epsf ps pdf ai
-qt=qt 3gp 3gp2 mov 3g2
-text=js txt css php c++ pas xmp c h ini cc gcode cpp
-video=flv mxf ts mkv webm aae rm
+archive=gz rar tgz cbz arj cbr tar zip 7z
+audio=mpc ogg aif wav mp+ mpp snd mp3 asx mid au wma flac m4a rmi mp2
+avi=wmv avi asf divx vfw vob
+mpeg=m2ts mpa mpg mpeg mp4 m4v m2v m1s m1v mpe mpm mts
+ps=ai ps pdf eps epsf
+qt=mov 3g2 3gp qt 3gp2
+text=c++ php xmp css cc js h cpp txt pas c ini gcode
+video=flv aae ts webm rm mxf mkv
 
 [%General]
 allFormats=false
@@ -227,7 +227,7 @@ useAnonymousLogs=true
 useInternalVideoPlayer=true
 useRecycleBin=true
 useTabs=true
-version=@ByteArray(1.6.5)
+version=@ByteArray(1.7.0)
 zoomPan=true
 
 [IPTC]
@@ -398,7 +398,7 @@ OpenWith=@Invalid()
 OpenWithName=@Invalid()
 OpenWithParam=@Invalid()
 PathBrowser=/home/time/Pictures/wallpaper/
-RecentFiles=/home/time/Pictures/wallpaper/11.png, /home/time/Pictures/anime/wallhaven-k76j8q_1080x1920.png, /home/time/Pictures/\x7ad6\x5c4f\x56fe\x7247/1.png
+RecentFiles=/home/time/Pictures/wallpaper/02.png, /home/time/Pictures/wallpaper/01.png, /home/time/Pictures/wallpaper/11.png, /home/time/Pictures/anime/wallhaven-k76j8q_1080x1920.png, /home/time/Pictures/\x7ad6\x5c4f\x56fe\x7247/1.png
 checkFreq=2
 customPath=
 dbFlag=0
@@ -406,14 +406,15 @@ dbFolder=
 dbThumbFlag=3
 dbThumbFolder=
 debug=0
-geom=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0G\0\0\x5\xf0\0\0\n4\0\0\v\xf5\0\0\0I\0\0\x5\xf2\0\0\n2\0\0\v\xf3\0\0\0\0\0\0\0\0\n\0\0\0\0I\0\0\x5\xf2\0\0\n2\0\0\v\xf3)
+geom=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\v\0\0\0\x33\0\0\t\xf4\0\0\x6\x34\0\0\0\v\0\0\0\x33\0\0\t\xf4\0\0\x6\x34\0\0\0\0\0\0\0\0\n\0\0\0\0\v\0\0\0\x33\0\0\t\xf4\0\0\x6\x34)
 language=zh
-lastCheck=@Variant(\0\0\0\xe\0%\x8a\xe7)
+lastCheck=@Variant(\0\0\0\xe\0%\x8a\xf3)
 oneInstance=false
 otherFlag=0
 otherFolder=
+previousGeometry=@Rect(0 0 0 0)
 restoreLastFilename=false
-session=@Invalid()
+session=/home/time/Pictures/wallpaper/28.png
 sessionIdx=0
 singleView=false
 startBrowser=true
@@ -424,6 +425,8 @@ style=-2
 [Viewer]
 adjustZoomDpi=true
 audioVolume=100
+autoHidePanelFlags=65535
+autoHidePanelWidth=320
 autoPlay=false
 backColor=55 55 55
 borderLineColor=0 0 0
@@ -432,6 +435,7 @@ checkBoardSize=8
 checkerColor1=255 255 255 255
 checkerColor2=240 240 240 255
 clearColor=0 0 0
+cropType=-1
 defaultFit=-1
 defaultFormat=@ByteArray(jpeg)
 defaultFullscreenFit=-1
@@ -460,7 +464,9 @@ infoOpacity=50
 infoPosition=0
 infoTemplate="{File Index} - {Filename}\n{Format} - {Size KB} KiB - {Width}x{Height}\n({EXIF:Date Taken}) ({EXIF:Make}) ({EXIF:Model}) ({Zoom}%)\n({Tag status}) ({Rating}) ({Color label}) "
 lButtonAction=1
+lButtonAltAction=-1
 lButtonCtrlAction=0
+lButtonShiftAction=4
 lKeyLR=1
 lKeyUD=0
 lockZoom=false
@@ -476,7 +482,9 @@ pasteKeepRatio=false
 prevSize=@Size(160 120)
 printSizeUnit=0
 rButtonAction=0
+rButtonAltAction=-1
 rButtonCtrlAction=-1
+rButtonShiftAction=-1
 ratio=0
 readAhead=true
 resetFit=true
@@ -518,7 +526,9 @@ useZoom=false
 videoPlaybar=true
 viewFilter=65519
 wheelAction=0
+wheelAltAction=-1
 wheelCtrlAction=2
+wheelShiftAction=-1
 zoomFixed=10
 zoomRelative=1.414213562
 
