--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,13 @@ config/trashrc
 config/coc
 config/Electron
 config/dconf
+config/Code - Insiders
+config/Code - OSS
+config/KDE
+config/Typora
+config/VNote/VNote
+config/deadbeef
+config/pulse
+config/spark-wine
+config/yesplaymusic
+config/QtProject.conf
