--- a/config/kitty/catppuccin.conf
+++ b/config/kitty/catppuccin.conf
@@ -8,8 +8,7 @@
 
 # The basic colors
 foreground              #D9E0EE
-## background              #1E1E2E
-background              #0D1213
+background              #000000
 selection_foreground    #D9E0EE
 selection_background    #575268
 
@@ -28,6 +27,13 @@ bell_border_color       #FAE3B0
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
+
+#: Tab bar colors
+active_tab_foreground   #F5C2E7
+active_tab_background   #575268
+inactive_tab_foreground #D9E0EE
+inactive_tab_background #1E1E2E
+tab_bar_background      #161320
 
 # Colors for marks (marked text in the terminal)
 
