--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,10 +5,12 @@
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-font_family      JertBrains Nerd Font
-bold_font        JertBrains Nerd Font Bold
-italic_font      JertBrains Nerd Font Italic
-bold_italic_font JertBrains Nerd Font Bold Italic
+
+	    font_family       JetBrainsMono Nerd Font
+		bold_font         auto
+		italic_font       auto
+		bold_italic_font  auto
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: list-fonts` command. By default they are derived automatically, by
@@ -21,7 +23,7 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-		font_size 16.0
+		font_size 12.0
 
 #: Font size (in pts)
 
@@ -493,7 +495,7 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 
 #: Tab bar {{{
 
-	tab_bar_edge 
+	tab_bar_edge bottom
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -574,7 +576,7 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 
 #: The foreground and background colors
 
-		background_opacity 0.9
+		background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -593,7 +595,7 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-		# background_image ~/Pictures/wallpaper/21.png
+		background_image none
 
 #: Path to a background image. Must be in PNG format.
 
@@ -946,13 +948,13 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 
 #:     map ctrl+f>2 set_font_size 20
 
-    kitty_mod ctrl+shift
+	kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-        clear_all_shortcuts no
+		clear_all_shortcuts no
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -965,15 +967,10 @@ bold_italic_font JertBrains Nerd Font Bold Italic
 #: options. For example, the above alias changes the default value of
 #: kitty +kitten hints --hints-offset to zero for all mappings,
 #: including the builtin ones.
-#
-# ctrl+v 也设置为粘贴
-
-map ctrl+shift+v paste_from_clipboard
-map ctrl+v paste_from_clipboard
 
 #: Clipboard {{{
 
-    map kitty_mod+c copy_to_clipboard
+	map kitty_mod+c copy_to_clipboard
 
 #: There is also a copy_or_interrupt action that can be optionally
 #: mapped to Ctrl+c. It will copy only if there is a selection and
@@ -981,10 +978,10 @@ map ctrl+v paste_from_clipboard
 #: will copy and clear the selection or send an interrupt if there is
 #: no selection.
 
-        map kitty_mod+v  paste_from_clipboard
-        map kitty_mod+s  paste_from_selection
-        map shift+insert paste_from_selection
-        map kitty_mod+o  pass_selection_to_program
+		map kitty_mod+v  paste_from_clipboard
+		map kitty_mod+s  paste_from_selection
+		map shift+insert paste_from_selection
+		map kitty_mod+o  pass_selection_to_program
 
 #: You can also pass the contents of the current selection to any
 #: program using pass_selection_to_program. By default, the system's
@@ -1003,15 +1000,15 @@ map ctrl+v paste_from_clipboard
 
 #: Scrolling {{{
 
-    map kitty_mod+up        scroll_line_up
-        map kitty_mod+k         scroll_line_up
-        map kitty_mod+down      scroll_line_down
-        map kitty_mod+j         scroll_line_down
-        map kitty_mod+page_up   scroll_page_up
-        map kitty_mod+page_down scroll_page_down
-        map kitty_mod+home      scroll_home
-        map kitty_mod+end       scroll_end
-        map kitty_mod+h         show_scrollback
+	map kitty_mod+up        scroll_line_up
+		map kitty_mod+k         scroll_line_up
+		map kitty_mod+down      scroll_line_down
+		map kitty_mod+j         scroll_line_down
+		map kitty_mod+page_up   scroll_page_up
+		map kitty_mod+page_down scroll_page_down
+		map kitty_mod+home      scroll_home
+		map kitty_mod+end       scroll_end
+		map kitty_mod+h         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
@@ -1027,7 +1024,7 @@ map ctrl+v paste_from_clipboard
 
 #: Window management {{{
 
-    map kitty_mod+enter new_window
+	map kitty_mod+enter new_window
 
 #: You can open a new window running an arbitrary program, for
 #: example::
@@ -1054,40 +1051,40 @@ map ctrl+v paste_from_clipboard
 
 #: For more details, see launch.
 
-        map kitty_mod+n new_os_window
+		map kitty_mod+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
-        map kitty_mod+w close_window
-        map kitty_mod+] next_window
-        map kitty_mod+[ previous_window
-        map kitty_mod+f move_window_forward
-        map kitty_mod+b move_window_backward
-        map kitty_mod+` move_window_to_top
-        map kitty_mod+r start_resizing_window
-        map kitty_mod+1 first_window
-        map kitty_mod+2 second_window
-        map kitty_mod+3 third_window
-        map kitty_mod+4 fourth_window
-        map kitty_mod+5 fifth_window
-        map kitty_mod+6 sixth_window
-        map kitty_mod+7 seventh_window
-        map kitty_mod+8 eighth_window
-        map kitty_mod+9 ninth_window
-        map kitty_mod+0 tenth_window
+		map kitty_mod+w close_window
+		map kitty_mod+] next_window
+		map kitty_mod+[ previous_window
+		map kitty_mod+f move_window_forward
+		map kitty_mod+b move_window_backward
+		map kitty_mod+` move_window_to_top
+		map kitty_mod+r start_resizing_window
+		map kitty_mod+1 first_window
+		map kitty_mod+2 second_window
+		map kitty_mod+3 third_window
+		map kitty_mod+4 fourth_window
+		map kitty_mod+5 fifth_window
+		map kitty_mod+6 sixth_window
+		map kitty_mod+7 seventh_window
+		map kitty_mod+8 eighth_window
+		map kitty_mod+9 ninth_window
+		map kitty_mod+0 tenth_window
 #: }}}
 
 #: Tab management {{{
 
-    map kitty_mod+k     next_tab
-        map kitty_mod+j     previous_tab
-        map kitty_mod+t     new_tab
-        map kitty_mod+w     close_tab
-        map kitty_mod+.     move_tab_forward
-        map kitty_mod+,     move_tab_backward
-        map kitty_mod+alt+t set_tab_title
+    	map kitty_mod+k     next_tab
+		map kitty_mod+j     previous_tab
+		map kitty_mod+t     new_tab
+		map kitty_mod+w     close_tab
+		map kitty_mod+.     move_tab_forward
+		map kitty_mod+,     move_tab_backward
+		map kitty_mod+alt+t set_tab_title
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
@@ -1111,7 +1108,7 @@ map ctrl+v paste_from_clipboard
 
 #: Layout management {{{
 
-    map kitty_mod+l next_layout
+	map kitty_mod+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
@@ -1128,9 +1125,9 @@ map ctrl+v paste_from_clipboard
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-    map kitty_mod+equal     change_font_size all +2.0
-        map kitty_mod+minus     change_font_size all -2.0
-        map kitty_mod+backspace change_font_size all 0
+	map kitty_mod+equal     change_font_size all +2.0
+		map kitty_mod+minus     change_font_size all -2.0
+		map kitty_mod+backspace change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
 
@@ -1148,37 +1145,37 @@ map ctrl+v paste_from_clipboard
 #: external program or insert it into the terminal or copy it to the
 #: clipboard.
 
-    map kitty_mod+e kitten hints
+	map kitty_mod+e kitten hints
 
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
 
-        map kitty_mod+p>f kitten hints --type path --program -
+		map kitty_mod+p>f kitten hints --type path --program -
 
 #: Select a path/filename and insert it into the terminal. Useful, for
 #: instance to run git commands on a filename output from a previous
 #: git command.
 
-        map kitty_mod+p>shift+f kitten hints --type path
+		map kitty_mod+p>shift+f kitten hints --type path
 
 #: Select a path/filename and open it with the default open program.
 
-        map kitty_mod+p>l kitten hints --type line --program -
+		map kitty_mod+p>l kitten hints --type line --program -
 
 #: Select a line of text and insert it into the terminal. Use for the
 #: output of things like: ls -1
 
-        map kitty_mod+p>w kitten hints --type word --program -
+		map kitty_mod+p>w kitten hints --type word --program -
 
 #: Select words and insert into terminal.
 
-        map kitty_mod+p>h kitten hints --type hash --program -
+		map kitty_mod+p>h kitten hints --type hash --program -
 
 #: Select something that looks like a hash and insert it into the
 #: terminal. Useful with git, which uses sha1 hashes to identify
 #: commits
 
-        map kitty_mod+p>n kitten hints --type linenum
+		map kitty_mod+p>n kitten hints --type linenum
 
 #: Select something that looks like filename:linenum and open it in
 #: vim at the specified line number.
@@ -1190,20 +1187,20 @@ map ctrl+v paste_from_clipboard
 
 #: Miscellaneous {{{
 
-    map kitty_mod+f11    toggle_fullscreen
-        map kitty_mod+f10    toggle_maximized
-        map kitty_mod+u      kitten unicode_input
-        map kitty_mod+f2     edit_config_file
-        map kitty_mod+escape kitty_shell window
+	map kitty_mod+f11    toggle_fullscreen
+		map kitty_mod+f10    toggle_maximized
+		map kitty_mod+u      kitten unicode_input
+		map kitty_mod+f2     edit_config_file
+		map kitty_mod+escape kitty_shell window
 
 #: Open the kitty shell in a new window/tab/overlay/os_window to
 #: control kitty using commands.
 
-        map kitty_mod+a>m    set_background_opacity +0.1
-        map kitty_mod+a>l    set_background_opacity -0.1
-        map kitty_mod+a>1    set_background_opacity 1
-        map kitty_mod+a>d    set_background_opacity default
-        map kitty_mod+delete clear_terminal reset active
+		map kitty_mod+a>m    set_background_opacity +0.1
+		map kitty_mod+a>l    set_background_opacity -0.1
+		map kitty_mod+a>1    set_background_opacity 1
+		map kitty_mod+a>d    set_background_opacity default
+		map kitty_mod+delete clear_terminal reset active
 
 #: You can create shortcuts to clear/reset the terminal. For example::
 
@@ -1253,4 +1250,4 @@ map ctrl+v paste_from_clipboard
 
 # }}}
 
-        include catppuccin.conf
+		include catppuccin.conf
