--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -760,3 +760,7 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 default_linemode devicons
+
+
+# 自定义快捷键
+map D shell trash %s
