添加了一些个人快捷键

--- a/config/lazygit/state.yml
+++ b/config/lazygit/state.yml
@@ -1,6 +1,7 @@
 lastupdatecheck: 0
 recentrepos:
 - /home/time/workspace/dotifiles
+- /home/time/Documents/Notes
 - /home/time/.config/omz
 - /home/time/workspace/dwm
 - /home/time/scripts
