--- a/config/lazygit/state.yml
+++ b/config/lazygit/state.yml
@@ -11,7 +11,7 @@ recentrepos:
     - /home/time/.config/omz
     - /home/time/.local/share/fcitx5/rime
 startuppopupversion: 5
-lastversion: 0.42.0
+lastversion: 0.43.1
 customcommandshistory:
     - q
     - wq
@@ -21,6 +21,7 @@ customcommandshistory:
 hidecommandlog: false
 ignorewhitespaceindiffview: false
 diffcontextsize: 3
+renamesimilaritythreshold: 50
 localbranchsortorder: recency
 remotebranchsortorder: alphabetical
 gitlogorder: topo-order
