--- a/config/vlc/vlc-qt-interface.conf
+++ b/config/vlc/vlc-qt-interface.conf
@@ -1,20 +1,33 @@
 [General]
-filedialog-path=@Variant(\0\0\0\x11\0\0\0\n/home/time)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\r\0\0\0\x16\0\0\x4\x2\0\0\x2\x83\0\0\x1\xe\0\0\0\x17\0\0\x4\x1\0\0\x2\x82\0\0\0\0\0\0\0\0\x5\0\0\0\x1\xe\0\0\0\x17\0\0\x4\x1\0\0\x2\x82)
+filedialog-path=@Variant(\0\0\0\x11\0\0\0mfile:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8)
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x10\xff\xff\xff\xd6\0\0\x3\xcb\0\0\x2>\0\0\0\x11\xff\xff\xff\xd7\0\0\x3\xca\0\0\x2=\0\0\0\0\0\0\0\0\x5\0\0\0\0\x11\xff\xff\xff\xd7\0\0\x3\xca\0\0\x2=)"
+
+[Epanel]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\f\0\0\0\x63\0\0\x3\xb5\0\0\x2\x82\0\0\x1\r\0\0\0\x64\0\0\x3\xb4\0\0\x2\x81\0\0\0\0\0\0\0\0\x5\0\0\0\x1\r\0\0\0\x64\0\0\x3\xb4\0\0\x2\x81)
 
 [FullScreen]
-pos=@Point(0 0)
-screen=@Rect(0 0 0 0)
+pos=@Point(240 735)
+screen=@Rect(0 0 1280 800)
 wide=false
 
 [MainWindow]
 adv-controls=0
-bgSize=@Size(600 0)
+bgSize=@Size(497 681)
 pl-dock-status=true
-playlist-visible=false
-playlistSize=@Size(-1 -1)
+playlist-visible=true
+playlistSize=@Size(954 530)
 status-bar-visible=false
 
+[Playlist]
+headerStateV2=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\xff\xff\xff\xff\x1\0\0\0\0\0\0\0\0\0\0\0\r\xec\x1f\0\0\0\n\0\0\0\x5\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x2\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\x2\xf1\0\0\0\r\x1\x1\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\r\0\0\0\xc8\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\xd9\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+leftSplitterGeometry=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc0\0\0\0\x80\x1\xff\xff\xff\xff\x1\0\0\0\x2\0)
+splitterSizes=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xb4\0\0\x1\xa4\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+view-mode=1
+zoom=0
+
 [RecentsMRL]
-list=file:///home/time/%E6%96%87%E6%A1%A3/%E6%B5%8B%E8%AF%95%E5%B7%A5%E4%BD%9C%E7%AE%80%E5%8E%86%E5%92%8C%E9%9D%A2%E8%AF%95%E8%B5%84%E6%96%99/%E9%9D%A2%E8%AF%95%E9%9D%A2%E7%BB%8F/%E7%BD%91%E6%98%93%E6%B8%B8%E6%88%8F%E6%B5%8B%E8%AF%951%E9%9D%A2.m4a
-times=2630485
+list=file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E-%E5%A4%9C%E7%89%88-201910-/1296x2304pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E-%E5%A4%9C%E7%89%88-201910-/1090x2304pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/5120x1440pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/3440x1440pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/2560x1440pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/1920x1080pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/1440x3040pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/1296x2304pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8_%E9%A3%8E--%E9%BB%84%E6%98%8F%E7%89%88/1080x2340pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/1920x1080pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/1296x2304pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/4k.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E9%9B%A8/1300x2300.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E9%9B%A8/1000x1724.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E6%B0%B4%E5%85%89%E4%B9%8B%E5%9F%8E-201907-/p3840x1080x.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E6%B0%B4%E5%85%89%E4%B9%8B%E5%9F%8E-201907-/p2560x1440x.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E6%B0%B4%E5%85%89%E4%B9%8B%E5%9F%8E-201907-/p1920x1080x.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E6%B0%B4%E5%85%89%E4%B9%8B%E5%9F%8E-201907-/p1536x2048.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8-%E6%B0%B4%E5%85%89%E4%B9%8B%E5%9F%8E-201907-/p1080x2340%20.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/ece0e8_1296x2304.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/b142e1_3840x2160.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/3a0db6_1920x1080.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/9347_2160x3840.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/8096_1920x1080.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/7982_3440x1440.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/4096x1152pro.mp4, file:///home/time/Pictures/%E9%AC%BC%E5%88%80%E5%A3%81%E7%BA%B8/%E5%8E%9F%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/%E7%8E%8B%E5%BA%A7/3840x2160pro.mp4, file:///home/time/Pictures/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/Sporty%2BZero%2BTwo-Darling%2Bin%2Bthe%2BFranxx.mp4, file:///home/time/Pictures/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/Sweater%20Girl%20Snow.mp4, file:///home/time/Pictures/%E5%8A%A8%E6%80%81%E5%A3%81%E7%BA%B8/To%20the%20end%20of%20the%20world%20LWP.mp4
+times=0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+
+[playlistdialog]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1T\0\0\0\x32\0\0\x3\xab\0\0\x2\xed\0\0\x1T\0\0\0\x32\0\0\x3\xab\0\0\x2\xed\0\0\0\0\0\0\0\0\x5\0\0\0\x1T\0\0\0\x32\0\0\x3\xab\0\0\x2\xed)
