--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,6 +7,8 @@
 #: characters.
 
 	  font_family       JetBrainsMono Nerd Font
+
+	  # font_family       MonaspiceRn Nerd Font Mono
 		bold_font         auto
 		italic_font       auto
 		bold_italic_font  auto
