--- a/config/lazygit/state.yml
+++ b/config/lazygit/state.yml
@@ -1,21 +1,23 @@
 lastupdatecheck: 0
 recentrepos:
     - /home/time/workspace/dotifiles
-    - /home/time/workspace/dotifiles/config/nvim
-    - /home/time/workspace/dwm
     - /home/time/workspace/blog
     - /home/time/workspace/st
+    - /home/time/scripts
+    - /home/time/workspace/dotifiles/config/nvim
+    - /home/time/文档/Notes
+    - /home/time/picom
+    - /home/time/workspace/dwm
     - /home/time/.local/share/nvim/lazy/LuaSnip
     - /home/time/workspace/wudao-dict
-    - /home/time/scripts
     - /home/time/.config/omz
     - /home/time/.local/share/fcitx5/rime
 startuppopupversion: 5
-lastversion: 0.43.1
+lastversion: 0.44.1
 customcommandshistory:
     - q
-    - wq
     - ""
+    - wq
     - help
     - git prune
 hidecommandlog: false
